# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_prebuilt_etc("netstats_notification_base") {
  source = "notification/resources/base/element/string.json"
  relative_install_dir = "netmanager_base/resources/base/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_bo_CN") {
  source = "notification/resources/bo_CN/element/string.json"
  relative_install_dir = "netmanager_base/resources/bo_CN/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_ug") {
  source = "notification/resources/ug/element/string.json"
  relative_install_dir = "netmanager_base/resources/ug/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_zh_CN") {
  source = "notification/resources/zh_CN/element/string.json"
  relative_install_dir = "netmanager_base/resources/zh_CN/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_zh_HK") {
  source = "notification/resources/zh_HK/element/string.json"
  relative_install_dir = "netmanager_base/resources/zh_HK/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_zh_TW") {
  source = "notification/resources/zh_TW/element/string.json"
  relative_install_dir = "netmanager_base/resources/zh_TW/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_zz_ZX") {
  source = "notification/resources/zz_ZX/element/string.json"
  relative_install_dir = "netmanager_base/resources/zz_ZX/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("netstats_notification_icon") {
  source = "notification/resources/network_ic.png"
  relative_install_dir = "netmanager_base/resources"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("netstats_notification_locale") {
  source = "common/notification/resources/locale_to_resourcePath.json"
  relative_install_dir = "netmanager_base/resources"
  part_name = "netmanager_enhanced"
  subsystem_name = "communication"
}

config("net_service_common_config") {
  # header file path
  include_dirs = [ "$INNERKITS_ROOT/netconnclient/include/proxy" ]

  cflags = [
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  cflags_cc = [
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]
}

ohos_shared_library("net_service_common") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "src/broadcast_manager.cpp",
    "src/net_manager_center.cpp",
    "src/net_settings.cpp",
    "src/route_utils.cpp",
  ]

  include_dirs = [
    "include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/netmanagernative/include",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "$NETSYSNATIVE_SOURCE_DIR/include/netsys",
  ]

  public_configs = [ ":net_service_common_config" ]

  deps = [
    ":netstats_notification_base",
    ":netstats_notification_bo_CN",
    ":netstats_notification_ug",
    ":netstats_notification_zh_CN",
    ":netstats_notification_zh_HK",
    ":netstats_notification_zh_TW",
    ":netstats_notification_zz_ZX",
    "$INNERKITS_ROOT/netconnclient:net_conn_parcel",
    "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller",
  ]

  external_deps = [
    "ability_base:want",
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "ipc:ipc_core",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  external_deps += [ "hilog:libhilog" ]

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
