# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_prebuilt_etc("netstats_notification_base") {
  source = "notification/resources/base/element/string.json"
  relative_install_dir = "netmanager_base/resources/base/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_bo_CN") {
  source = "notification/resources/bo_CN/element/string.json"
  relative_install_dir = "netmanager_base/resources/bo_CN/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_ug") {
  source = "notification/resources/ug/element/string.json"
  relative_install_dir = "netmanager_base/resources/ug/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_zh_CN") {
  source = "notification/resources/zh_CN/element/string.json"
  relative_install_dir = "netmanager_base/resources/zh_CN/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_zh_HK") {
  source = "notification/resources/zh_HK/element/string.json"
  relative_install_dir = "netmanager_base/resources/zh_HK/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_zh_TW") {
  source = "notification/resources/zh_TW/element/string.json"
  relative_install_dir = "netmanager_base/resources/zh_TW/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_zz_ZX") {
  source = "notification/resources/zz_ZX/element/string.json"
  relative_install_dir = "netmanager_base/resources/zz_ZX/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_ar") {
  source = "notification/resources/ar/element/string.json"
  relative_install_dir = "netmanager_base/resources/ar/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_es") {
  source = "notification/resources/es/element/string.json"
  relative_install_dir = "netmanager_base/resources/es/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_fr") {
  source = "notification/resources/fr/element/string.json"
  relative_install_dir = "netmanager_base/resources/fr/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_ja") {
  source = "notification/resources/ja/element/string.json"
  relative_install_dir = "netmanager_base/resources/ja/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_ko") {
  source = "notification/resources/ko/element/string.json"
  relative_install_dir = "netmanager_base/resources/ko/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_ru") {
  source = "notification/resources/ru/element/string.json"
  relative_install_dir = "netmanager_base/resources/ru/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
ohos_prebuilt_etc("netstats_notification_vi") {
  source = "notification/resources/vi/element/string.json"
  relative_install_dir = "netmanager_base/resources/vi/element"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("netstats_notification_icon") {
  source = "notification/resources/network_ic.png"
  relative_install_dir = "netmanager_base/resources"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("netstats_notification_locale") {
  source = "notification/resources/locale_to_resourcePath.json"
  relative_install_dir = "netmanager_base/resources"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

config("net_service_common_config") {
  # header file path
  include_dirs = [
    "include",
    "$INNERKITS_ROOT/netconnclient/include/proxy",
  ]

  cflags = common_cflags

  cflags_cc = common_cflags
}

ohos_shared_library("net_service_common") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/netstats/src/app_state_aware.cpp",
    "src/broadcast_manager.cpp",
    "src/net_manager_center.cpp",
    "src/net_settings.cpp",
    "src/route_utils.cpp",
  ]

  include_dirs = [
    "include",
    "$NETMANAGER_BASE_ROOT/utils/common_utils/include",
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/netmanagernative/include",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "$NETSYSNATIVE_SOURCE_DIR/include/netsys",
  ]

  public_configs = [ ":net_service_common_config" ]

  deps = [
    ":netstats_notification_base",
    ":netstats_notification_bo_CN",
    ":netstats_notification_icon",
    ":netstats_notification_locale",
    ":netstats_notification_ug",
    ":netstats_notification_zh_CN",
    ":netstats_notification_zh_HK",
    ":netstats_notification_zh_TW",
    ":netstats_notification_zz_ZX",
    ":netstats_notification_ar",
    ":netstats_notification_es",
    ":netstats_notification_fr",
    ":netstats_notification_ja",
    ":netstats_notification_ko",
    ":netstats_notification_ru",
    ":netstats_notification_vi",
    "$INNERKITS_ROOT/netconnclient:net_conn_parcel",
    "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "ipc:ipc_core",
    "jsoncpp:jsoncpp",
    "samgr:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  external_deps += [ "hilog:libhilog" ]

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
