# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_shared_library("dns_resolver_manager") {
  sources = [
    "$DNSRESOLVERMANAGER_SOURCE_DIR/src/dns_resolver_service.cpp",
    "$DNSRESOLVERMANAGER_SOURCE_DIR/src/dns_service_iface.cpp",
    "$DNSRESOLVERMANAGER_SOURCE_DIR/src/stub/dns_resolver_service_stub.cpp",
  ]

  include_dirs = [
    "$DNSRESOLVERMANAGER_SOURCE_DIR/include",
    "$DNSRESOLVERMANAGER_SOURCE_DIR/include/stub",
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/dnsresolverclient/include",
    "$INNERKITS_ROOT/dnsresolverclient/include/proxy",
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$INNERKITS_ROOT/netmanagernative/include",
  ]

  deps = [
    "$INNERKITS_ROOT/dnsresolverclient:dns_resolver_parcel",
    "$NETCONNMANAGER_COMMON_DIR:net_service_common",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"DnsResolverManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (enable_sys_func) {
    defines += [ "SYS_FUNC" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
